# silent-sky

./: .gitignore  IMPLEMENTATION_STATUS.md  LICENSE  QUICKSTART.md  README.md
data/episodes/: .gitkeep
docs/: 20251223_IMPLEMENTATION_PLAN.md  ARCHITECTURE.md  COORDINATE_SYSTEM_ANALYSIS.md  CURRENT_STATUS.md  DESIGN_THOUGHTS.md  NEXT_STEPS.md  README.md  ROTATION_DEBUG_ANALYSIS.md  SPHERE_ROTATION_DESIGN.md
python/: README.md  config.yaml  pyproject.toml  replay_episode.py  requirements.txt  run_episode.py  setup.py  train.py
python/data/episodes/: episode_20251223_143717.json
python/silent_sky/: __init__.py
python/silent_sky/agent/: __init__.py  dummy_agent.py
python/silent_sky/bridge/: __init__.py  zmq_bridge.py
python/silent_sky/utils/: __init__.py  config.py  logging.py
unity/: ASSET_SETUP.md  ENVIRONMENT_SCENE_SETUP.md  README.md
unity/Scripts/Bridge/: ZMQBridge.cs
unity/Scripts/Finance/: BudgetUI.cs
unity/Scripts/Mission/: MissionDirectives.cs  UpgradeShop.cs
unity/Scripts/Visualization/: AgentStateUI.cs  EventVisualizer.cs  SectorMap.cs  UncertaintyDisplay.cs
unity/Silent Sky/Assets/: UniversalRenderPipelineGlobalSettings.asset
unity/Silent Sky/Assets/Prefabs/: SectorPrefab 1.prefab
unity/Silent Sky/Assets/Scenes/: EnvironmentScene.unity  ObservatoryScene.unity
unity/Silent Sky/Assets/Scripts/Bridge/: UnityMainThreadDispatcher.cs  ZMQBridge.cs  ZMQBridgeTest.cs
unity/Silent Sky/Assets/Scripts/Environment/: EventVisualizer.cs  FakeDataGenerator.cs  HexagonGridMapper.cs  (+11 more)
unity/Silent Sky/ProjectSettings/: ProjectSettings.asset
(+11 files in other folders)
